deployment/deployment.yml
# frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-todo
  namespace: practice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-todo
  template:
    metadata:
      labels:
        app: frontend-todo
    spec:
      containers:
        - name: frontend-todo
          image: ghcr.io/deztroid/test_app_f:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
