deployment/gateway.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: practice

spec:
  rules:
    - http:
        paths:
          - path: /static/
            pathType: Prefix
            backend:
              service:
                name: frontend-todo
                port:
                  number: 80
          

          - path: /backend/api/
            pathType: Prefix
            backend:
              service:
                name: backend-todo
                port:
                  number: 8080
          

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-todo
                port:
                  number: 80
